--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,9 +23,31 @@ jobs:
       run: terraform init
 
     - name: Terraform Plan
-      run: terraform plan -var="client_id=${{ secrets.TF_CLIENT_ID }}" -var="client_secret=${{ secrets.TF_CLIENT_SECRET }}" -var="tenant_id=${{ secrets.TF_TENANT_ID }}"
+      run: |
+        terraform plan \
+          -var="client_id=${{ secrets.ARM_CLIENT_ID }}" \
+          -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" \
+          -var="tenant_id=${{ secrets.ARM_TENANT_ID }}"
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve -var="client_id=${{ secrets.TF_CLIENT_ID }}" -var="client_secret=${{ secrets.TF_CLIENT_SECRET }}" -var="tenant_id=${{ secrets.TF_TENANT_ID }}"
-    
+      run: |
+        terraform apply -auto-approve \
+          -var="client_id=${{ secrets.ARM_CLIENT_ID }}" \
+          -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" \
+          -var="tenant_id=${{ secrets.ARM_TENANT_ID }}"
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+
+#this code was used when error in plan and apply
+#   - name: Terraform Plan
+#     run: terraform plan -var="client_id=${{ secrets.ARM_CLIENT_ID }}" -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" -var="tenant_id=${{ secrets.ARM_TENANT_ID }}"
+
+#  - name: Terraform Apply
+#    run: terraform apply -auto-approve -var="client_id=${{ secrets.ARM_CLIENT_ID }}" -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" -var="tenant_id=${{ secrets.ARM_TENANT_ID }}" **/
 
