--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,24 +25,24 @@ jobs:
     - name: Terraform Plan
       run: |
         terraform plan \
-          -var="client_id=${{ secrets.ARM_CLIENT_ID }}" \
-          -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" \
-          -var="tenant_id=${{ secrets.ARM_TENANT_ID }}"
+          -var="client_id=${{ secrets.AZUREAD_CLIENT_ID }}" \
+          -var="client_secret=${{ secrets.AZUREAD_CLIENT_SECRET }}" \
+          -var="tenant_id=${{ secrets.AZUREAD_TENANT_ID }}"
       env:
-        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        AZUREAD_CLIENT_ID: ${{ secrets.AZUREAD_CLIENT_ID }}
+        AZUREAD_CLIENT_SECRET: ${{ secrets.AZUREAD_CLIENT_SECRET }}
+        AZUREAD_TENANT_ID: ${{ secrets.AZUREAD_TENANT_ID }}
 
     - name: Terraform Apply
       run: |
         terraform apply -auto-approve \
-          -var="client_id=${{ secrets.ARM_CLIENT_ID }}" \
-          -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" \
-          -var="tenant_id=${{ secrets.ARM_TENANT_ID }}"
+          -var="client_id=${{ secrets.AZUREAD_CLIENT_ID }}" \
+          -var="client_secret=${{ secrets.AZUREAD_CLIENT_SECRET }}" \
+          -var="tenant_id=${{ secrets.AZUREAD_TENANT_ID }}"
       env:
-        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        AZUREAD_CLIENT_ID: ${{ secrets.AZUREAD_CLIENT_ID }}
+        AZUREAD_CLIENT_SECRET: ${{ secrets.AZUREAD_CLIENT_SECRET }}
+        AZUREAD_TENANT_ID: ${{ secrets.AZUREAD_TENANT_ID }}
 
 #this code was used when error in plan and apply
 #   - name: Terraform Plan
