--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,53 +1,34 @@
-name: Deploy Conditional Access
+name: Deploy Conditional Access Policy
 
 on:
   push:
     branches:
-      - main
+      - main  # or your branch name
 
 jobs:
   terraform:
-    name: 'Terraform Apply'
+    name: Terraform Apply
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.7.0
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
 
-    - name: Terraform Init
-      run: terraform init
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Terraform Plan
-      run: |
-        terraform plan \
-          -var="client_id=${{ secrets.AZUREAD_CLIENT_ID }}" \
-          -var="client_secret=${{ secrets.AZUREAD_CLIENT_SECRET }}" \
-          -var="tenant_id=${{ secrets.AZUREAD_TENANT_ID }}"
-      env:
-        AZUREAD_CLIENT_ID: ${{ secrets.AZUREAD_CLIENT_ID }}
-        AZUREAD_CLIENT_SECRET: ${{ secrets.AZUREAD_CLIENT_SECRET }}
-        AZUREAD_TENANT_ID: ${{ secrets.AZUREAD_TENANT_ID }}
+      - name: Terraform Init
+        run: terraform init
 
-    - name: Terraform Apply
-      run: |
-        terraform apply -auto-approve \
-          -var="client_id=${{ secrets.AZUREAD_CLIENT_ID }}" \
-          -var="client_secret=${{ secrets.AZUREAD_CLIENT_SECRET }}" \
-          -var="tenant_id=${{ secrets.AZUREAD_TENANT_ID }}"
-      env:
-        AZUREAD_CLIENT_ID: ${{ secrets.AZUREAD_CLIENT_ID }}
-        AZUREAD_CLIENT_SECRET: ${{ secrets.AZUREAD_CLIENT_SECRET }}
-        AZUREAD_TENANT_ID: ${{ secrets.AZUREAD_TENANT_ID }}
+      - name: Terraform Plan
+        run: terraform plan
 
-#this code was used when error in plan and apply
-#   - name: Terraform Plan
-#     run: terraform plan -var="client_id=${{ secrets.ARM_CLIENT_ID }}" -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" -var="tenant_id=${{ secrets.ARM_TENANT_ID }}"
-
-#  - name: Terraform Apply
-#    run: terraform apply -auto-approve -var="client_id=${{ secrets.ARM_CLIENT_ID }}" -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" -var="tenant_id=${{ secrets.ARM_TENANT_ID }}" **/
-
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
