--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,29 +3,28 @@ name: Deploy Conditional Access Policy
 on:
   push:
     branches:
-      - main  # or your branch name
+      - main
+
+permissions:
+  id-token: write  # ✅ Required for OIDC
+  contents: read   # ✅ Required to read repo contents
 
 jobs:
-  terraform:
-    name: Terraform Apply
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
-
-      - name: Login to Azure using OIDC
+      - name: Azure Login
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           allow-no-subscriptions: true
-
+          enable-AzPSSession: false
 
       - name: Terraform Init
         run: terraform init
