--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,8 +6,8 @@ on:
       - main
 
 permissions:
-  id-token: write    # ✅ Required for OIDC authentication
-  contents: read     # ✅ Required to read repo contents
+  id-token: write  # ✅ Required for OIDC
+  contents: read   # ✅ Required to read repo contents
 
 jobs:
   deploy:
