--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Print GitHub OIDC subject
-        run: echo "Subject: repo:${{ github.repository }}:ref:${{ github.ref }}"
+        run: |
+          echo "Subject: repo:${ github.repository }:ref:${{ github.ref }}"
 
       - name: Azure Login
         uses: azure/login@v1
@@ -42,3 +43,4 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
+
